--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -7,6 +7,7 @@ license = "CoFH - Don't Be A Jerk (Learn, Don't Steal)"
 modId = "thermal_expansion"
 version = "${file.jarVersion}"
 displayName = "Thermal Expansion"
+updateJSONURL = "https://raw.github.com/cofh/version/master/thermal/update_expansion.json"
 displayURL = "https://teamcofh.com/"
 logoFile = "thermal_expansion.png"
 credits = "Team CoFH"
