--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -10,6 +10,7 @@ displayName = "Thermal Expansion"
 updateJSONURL = "https://raw.github.com/cofh/version/master/thermal/update_expansion.json"
 displayURL = "https://teamcofh.com/"
 logoFile = "thermal_expansion.png"
+itemIcon = "thermal:machine_furnace"
 credits = "Team CoFH"
 authors = "King Lemming"
 description = '''
