--- a/gradle.properties
+++ b/gradle.properties
@@ -7,8 +7,8 @@ mod_version=10.0.0
 mc_version=1.19
 forge_version=41.0.43
 
-cofh_core_version=10.0.0+
-thermal_foundation_version=10.0.0+
+cofh_core_version=10.0.0.+
+thermal_core_version=10.0.0.+
 
 jei_version=11.0.0.206
 #patchouli_version=1.18.2-67
