Fix some recipes. Add some tags.

--- a/src/main/resources/data/thermal/recipes/machines/press/packing3x3/press_apple_packing.json
+++ b/src/main/resources/data/thermal/recipes/machines/press/packing3x3/press_apple_packing.json
@@ -14,11 +14,5 @@
       "item": "thermal:apple_block"
     }
   ],
-  "energy": 400,
-  "conditions": [
-    {
-      "flag": "vanilla_blocks",
-      "type": "thermal:flag"
-    }
-  ]
+  "energy": 400
 }
