--- a/src/main/resources/data/thermal/recipes/machines/press/unpacking/press_apple_unpacking.json
+++ b/src/main/resources/data/thermal/recipes/machines/press/unpacking/press_apple_unpacking.json
@@ -14,11 +14,5 @@
       "count": 9
     }
   ],
-  "energy": 400,
-  "conditions": [
-    {
-      "flag": "vanilla_blocks",
-      "type": "thermal:flag"
-    }
-  ]
+  "energy": 400
 }
