--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,24 @@
-org.gradle.daemon=false
-
+# Mod Properties
 mod_id=thermal_expansion
 mod_name=Thermal Expansion
 mod_version=9.2.0
 
+# Platform Properties
+java_version=17
 mc_version=1.18.2
 forge_version=40.1.76
 
-cofh_core_version=9.2.0.+
-thermal_foundation_version=9.2.0.+
+# Dependency Properties
+cofh_core_version=9.2.0
+cofh_core_max_version=9.3.0
+
+thermal_core_version=9.2.0
+thermal_core_max_version=9.3.0
 
 jei_version=9.7.1.255
 patchouli_version=1.18.2-67
+
+# Publishing Properties
+
+# Options: alpha, beta, release
+release_type=release
