--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,15 @@
-rootProject.name = 'ThermalExpansion'
+pluginManagement {
+    resolutionStrategy {
+        eachPlugin {
+            if (requested.id.id == 'org.spongepowered.mixin') {
+                useModule("org.spongepowered:mixingradle:${requested.version}")
+            }
+        }
+    }
+    repositories {
+        gradlePluginPortal()
+        maven { url 'https://repo.spongepowered.org/repository/maven-public/' }
+        maven { url 'https://maven.minecraftforge.net/' }
+        maven { url 'https://maven.parchmentmc.org/' }
+    }
+}
