--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -35,7 +35,7 @@ side = "BOTH"
 [[dependencies.thermal_expansion]]
 modId = "cofh_core"
 mandatory = true
-versionRange = "[${cofh_core_version}, {$cofh_core_max_version}]"
+versionRange = "[${cofh_core_version}, ${cofh_core_max_version}]"
 ordering = "AFTER"
 side = "BOTH"
 
