--- a/build.gradle
+++ b/build.gradle
@@ -147,6 +147,11 @@ jar {
                 'Implementation-Timestamp': new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
+
+    doFirst {
+        exclude 'cofh/thermal/expansion/data/**'
+        exclude '.cache/**'
+    }
 }
 
 task srcJar(type: Jar) {
