--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ cofh_core_max_version=10.3.0
 thermal_core_version=10.2.0
 thermal_core_max_version=10.3.0
 
-jei_version=11.2.0.256
+jei_version=11.6.0+
 #patchouli_version=1.18.2-67
 
 # Publishing Properties
