--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,12 @@ plugins {
     id 'com.modrinth.minotaur' version "2.+"
 
     id 'net.covers1624.signing' version '1.1.4'
-    id 'net.minecraftforge.gradle' version '5.1.+'
+    id 'net.neoforged.gradle' version '[6.0.18,6.2)'
     id 'org.spongepowered.mixin' version '0.7-SNAPSHOT'
 }
 
 java.toolchain.languageVersion = JavaLanguageVersion.of("${java_version}")
+java.withSourcesJar()
 
 sourceSets.main.resources.srcDirs += "src/main/generated"
 
@@ -83,10 +84,8 @@ processResources {
                 'mc_version': mc_version,
                 'forge_version': forge_version,
                 'forge_major_version': forge_version.split('\\.')[0],
-                'cofh_core_version': cofh_core_version,
-                'cofh_core_max_version': cofh_core_max_version,
-                'thermal_core_version': thermal_core_version,
-                'thermal_core_max_version': thermal_core_max_version
+                'cofh_core_version_range': "[${cofh_core_version.replace(".+", "")},${cofh_core_max_version})",
+                'thermal_core_version_range': "[${thermal_core_version.replace(".+", "")},${thermal_core_max_version})"
     }
 }
 
@@ -104,17 +103,18 @@ repositories {
 }
 
 dependencies {
-    minecraft "net.minecraftforge:forge:${mc_version}-${forge_version}"
+    minecraft "net.neoforged:forge:${mc_version}-${forge_version}"
 
-    implementation fg.deobf("com.teamcofh:cofh_core:${mc_version}-${cofh_core_version}.+")
-    implementation fg.deobf("com.teamcofh:thermal_core:${mc_version}-${thermal_core_version}.+")
+    // implementation fg.deobf("com.teamcofh:cofh_core:${mc_version}-${cofh_core_version}.+")
+    implementation fg.deobf("com.teamcofh:cofh_core:1.19.2-${cofh_core_version}.+")
+    // implementation fg.deobf("com.teamcofh:thermal_core:${mc_version}-${thermal_core_version}.+")
+    implementation fg.deobf("com.teamcofh:thermal_core:1.19.2-${thermal_core_version}.+")
 
     // compile against the JEI API but do not include it at runtime
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}-forge-api:${jei_version}")
 
     // at runtime, use the full JEI
-    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-common:${jei_version}")
     runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}-forge:${jei_version}")
 
     // compileOnly fg.deobf("vazkii.patchouli:Patchouli:${patchouli_version}:api")
@@ -154,12 +154,6 @@ jar {
     }
 }
 
-task srcJar(type: Jar) {
-    build.dependsOn it
-    from sourceSets.main.allSource
-    classifier = 'sources'
-}
-
 publishing {
     repositories {
         if (System.getenv('MAVEN_PASS')) {
@@ -178,7 +172,7 @@ publishing {
             artifactId project.archivesBaseName
             version project.version
             artifact jar
-            artifact srcJar
+            artifact sourcesJar
 
             pom {
                 name = archivesBaseName
