--- a/build.gradle
+++ b/build.gradle
@@ -105,10 +105,8 @@ repositories {
 dependencies {
     minecraft "net.neoforged:forge:${mc_version}-${forge_version}"
 
-    // implementation fg.deobf("com.teamcofh:cofh_core:${mc_version}-${cofh_core_version}.+")
-    implementation fg.deobf("com.teamcofh:cofh_core:1.19.2-${cofh_core_version}.+")
-    // implementation fg.deobf("com.teamcofh:thermal_core:${mc_version}-${thermal_core_version}.+")
-    implementation fg.deobf("com.teamcofh:thermal_core:1.19.2-${thermal_core_version}.+")
+    implementation fg.deobf("com.teamcofh:cofh_core:${mc_version}-${cofh_core_version}.+")
+    implementation fg.deobf("com.teamcofh:thermal_core:${mc_version}-${thermal_core_version}.+")
 
     // compile against the JEI API but do not include it at runtime
     compileOnly fg.deobf("mezz.jei:jei-${mc_version}-common-api:${jei_version}")
